# cli-resume

./: CMakeLists.txt  README.md  resume.json
src/: main.cpp  resume.cpp  resume.h
